@@ -1,9 +1,9 @@
-#define FILEVER_INCVERSION        0,19,0,198
-#define PRODUCTVER_INCVERSION     0,19,0,198
-#define STRFILEVER_INCVERSION     "0, 19, 0, 198\0"
-#define STRPRODUCTVER_INCVERSION  "0, 19, 0, 198\0"
+#define FILEVER_INCVERSION        0,19,0,199
+#define PRODUCTVER_INCVERSION     0,19,0,199
+#define STRFILEVER_INCVERSION     "0, 19, 0, 199\0"
+#define STRPRODUCTVER_INCVERSION  "0, 19, 0, 199\0"
 #define TSVN_VERMAJOR             0
 #define TSVN_VERMINOR             19
 #define TSVN_VERMICRO             0
-#define TSVN_VERBUILD_INCVERSION  198
+#define TSVN_VERBUILD_INCVERSION  199
 
